--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="styles1.css">
   <link rel="stylesheet" href="styles2.css">
+  <link rel="stylesheet" href="styles3.css">
 </head>
 <body>
     <div class="video-background">
