--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="clock-item clock-hours countdown-time-value col-sm-6 col-md-3">
                 <div class="wrap">
                     <div class="inner">
-                        <div id="canvas_hours" class="clock-canvas"></div>
+                        <div id="canvas_hours_submission" class="clock-canvas"></div>
                         <div class="text">
                             <p class="val">0</p>
                             <p class="type-hours type-time">HOURS</p>
@@ -80,7 +80,7 @@
             <div class="clock-item clock-minutes countdown-time-value col-sm-6 col-md-3">
                 <div class="wrap">
                     <div class="inner">
-                        <div id="canvas_minutes" class="clock-canvas"></div>
+                        <div id="canvas_minutes_submission" class="clock-canvas"></div>
                         <div class="text">
                             <p class="val">0</p>
                             <p class="type-minutes type-time">MINUTES</p>
@@ -91,7 +91,7 @@
             <div class="clock-item clock-seconds countdown-time-value col-sm-6 col-md-3">
                 <div class="wrap">
                     <div class="inner">
-                        <div id="canvas_seconds" class="clock-canvas"></div>
+                        <div id="canvas_seconds_submission" class="clock-canvas"></div>
                         <div class="text">
                             <p class="val">0</p>
                             <p class="type-seconds type-time">SECONDS</p>
