--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
           </div>
         </div>
       </div>
+      <h1>Please Start Submitting Your Projects on Devfolio! 🚦</h1>
+      <h3>Submission Will close by 4pm</h3>
     </div>
   </section>
 
